# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("hTech" VERSION 0.1.0 DESCRIPTION "https://github.com/hallamrear/hTech | https://twitter.com/halwastooshort")

# Include sub-projects.
add_subdirectory ("hTech")